Bug 1890905 - Avoid basic_string_view<unsigned char> from ever being picked as a possibility for NewStringCopy. r=spidermonkey-reviewers,dminor

It's not a valid type.

Differential Revision: https://phabricator.services.mozilla.com/D207231